Fixed jump in button size when answer selected, removed role list from ul elements

--- a/src/index.css
+++ b/src/index.css
@@ -47,7 +47,7 @@ select {
 }
 
 button {
-  border: none;
+  border: 4px solid transparent;
   cursor: pointer;
   transition: all 150ms ease-in-out;
 }
